# Hand_gestures

./: gesture_recognition_model.h5  main.py  main_form.py  pyproject.toml  transmutation.py  untitled.ui  voice.py
app/: AI.py  add.py  test.py
