[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Isfireomat <dfdfgfgf666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.7.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
mediapipe = "^0.10.11"
matplotlib = "^3.8.4"
pyttsx3 = "^2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
